tests/paczka1/fuzzy1/23264221.err
Error in line 5: S767 S681 85,7
Error in line 16: NcX9B S767 38,2
Error in line 20: 5k3y4gLEuyp S681 71,8
Error in line 28: 5k3y4gLEuyp S767 30,6
Error in line 30: 5k3y4gLEuyp A83 22,2
Error in line 33: Tavn S612 64,6
Error in line 36: Tavn S681 77,2
